Added wildfly bom as import

--- a/pom.xml
+++ b/pom.xml
@@ -37,7 +37,21 @@
 		<version.java>1.8</version.java>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
+		
+		<wildfly.version>10.1.1.Final</wildfly.version>
 	</properties>
+	
+	<dependencyManagement>
+		<dependencies>
+            <dependency>
+                <groupId>org.wildfly.bom</groupId>
+                <artifactId>wildfly-javaee7-with-tools</artifactId>
+                <version>${wildfly.version}</version>
+                <type>pom</type>
+                <scope>import</scope>
+            </dependency>
+		</dependencies>
+	</dependencyManagement>
 
 	<build>
 		<defaultGoal>package</defaultGoal>
