--- a/eclipse-settings/pom.xml
+++ b/eclipse-settings/pom.xml
@@ -5,7 +5,7 @@
 	<parent>
 		<groupId>nl.crashdata.crashdata-parent</groupId>
 		<artifactId>crashdata-parent</artifactId>
-		<version>1.1</version>
+		<version>1.2-SNAPSHOT</version>
 	</parent>
 
 	<artifactId>eclipse-settings</artifactId>
