--- a/pom.xml
+++ b/pom.xml
@@ -152,7 +152,7 @@
 						<dependency>
 							<groupId>nl.crashdata.eclipse</groupId>
 							<artifactId>eclipse-settings</artifactId>
-							<version>1.0</version>
+							<version>${project.version}</version>
 						</dependency>
 					</dependencies>
 				</plugin>
