--- a/pom.xml
+++ b/pom.xml
@@ -38,16 +38,21 @@
 		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
 
 		<version.wildfly>10.1.1.Final</version.wildfly>
-		<version.jackson>2.8.9</version.jackson>
+		<version.jackson>2.9.0</version.jackson>
 		<version.danekja>1.8.3</version.danekja>
 		<version.wicket>7.8.0</version.wicket>
 	</properties>
-
+	
 	<dependencyManagement>
 		<dependencies>
 			<dependency>
 				<groupId>com.fasterxml.jackson.core</groupId>
 				<artifactId>jackson-annotations</artifactId>
+				<version>${version.jackson}</version>
+			</dependency>
+			<dependency>
+				<groupId>com.fasterxml.jackson.core</groupId>
+				<artifactId>jackson-core</artifactId>
 				<version>${version.jackson}</version>
 			</dependency>
 			<dependency>
@@ -61,9 +66,19 @@
 				<version>${version.jackson}</version>
 			</dependency>
 			<dependency>
-				<groupId>nl.crashdata.wicket-chartjs</groupId>
-				<artifactId>wicket-chartjs-data</artifactId>
-				<version>${project.version}</version>
+				<groupId>commons-fileupload</groupId>
+				<artifactId>commons-fileupload</artifactId>
+				<version>1.3.3</version>
+			</dependency>
+			<dependency>
+				<groupId>commons-io</groupId>
+				<artifactId>commons-io</artifactId>
+				<version>2.5</version>
+			</dependency>
+			<dependency>
+				<groupId>org.apache.commons</groupId>
+				<artifactId>commons-collections4</artifactId>
+				<version>4.1</version>
 			</dependency>
 			<dependency>
 				<groupId>org.apache.wicket</groupId>
@@ -71,16 +86,19 @@
 				<version>${version.wicket}</version>
 			</dependency>
 			<dependency>
+				<groupId>org.apache.wicket</groupId>
+				<artifactId>wicket-request</artifactId>
+				<version>${version.wicket}</version>
+			</dependency>
+			<dependency>
+				<groupId>org.apache.wicket</groupId>
+				<artifactId>wicket-util</artifactId>
+				<version>${version.wicket}</version>
+			</dependency>
+			<dependency>
 				<groupId>org.danekja</groupId>
 				<artifactId>jdk-serializable-functional</artifactId>
 				<version>${version.danekja}</version>
-			</dependency>
-			<dependency>
-				<groupId>org.wildfly.bom</groupId>
-				<artifactId>wildfly-javaee7-with-tools</artifactId>
-				<version>${version.wildfly}</version>
-				<type>pom</type>
-				<scope>import</scope>
 			</dependency>
 		</dependencies>
 	</dependencyManagement>
