--- a/pom.xml
+++ b/pom.xml
@@ -100,6 +100,11 @@
 				<artifactId>jdk-serializable-functional</artifactId>
 				<version>${version.danekja}</version>
 			</dependency>
+			<dependency>
+				<groupId>org.slf4j</groupId>
+				<artifactId>slf4j-api</artifactId>
+				<version>1.7.21</version>
+			</dependency>
 		</dependencies>
 	</dependencyManagement>
 
