--- a/pom.xml
+++ b/pom.xml
@@ -8,7 +8,7 @@
 
 	<groupId>nl.crashdata.crashdata-parent</groupId>
 	<artifactId>crashdata-parent</artifactId>
-	<version>1.4</version>
+	<version>1.5-SNAPSHOT</version>
 	<packaging>pom</packaging>
 
 	<name>CrashData parent pom</name>
@@ -16,7 +16,7 @@
 	<scm>
 		<url>https://github.com/haster/crashdata-parent</url>
 		<connection>scm:git:git@github.com:haster/crashdata-parent.git</connection>
-		<tag>crashdata-parent-1.4</tag>
+		<tag>HEAD</tag>
 	</scm>
 
 	<repositories>
@@ -216,7 +216,7 @@
 						<dependency>
 							<groupId>nl.crashdata.crashdata-parent</groupId>
 							<artifactId>eclipse-settings</artifactId>
-							<version>1.4</version>
+							<version>1.5-SNAPSHOT</version>
 						</dependency>
 					</dependencies>
 				</plugin>
