--- a/pom.xml
+++ b/pom.xml
@@ -85,7 +85,7 @@
 
 		<version.wildfly>10.1.1.Final</version.wildfly>
 		<version.jackson>2.9.2</version.jackson>
-		<version.danekja>1.8.3</version.danekja>
+		<version.danekja>1.8.4</version.danekja>
 		<version.wicket>7.9.0</version.wicket>
 	</properties>
 
@@ -181,10 +181,16 @@
 					</executions>
 				</plugin>
 
+                                <plugin>
+                                        <groupId>org.apache.maven.plugins</groupId>
+                                        <artifactId>maven-clean-plugin</artifactId>
+                                        <version>3.0.0</version>
+                                </plugin>
+
 				<plugin>
 					<groupId>org.apache.maven.plugins</groupId>
 					<artifactId>maven-compiler-plugin</artifactId>
-					<version>3.5.1</version>
+					<version>3.7.0</version>
 					<inherited>true</inherited>
 					<configuration>
 						<source>${version.java}</source>
@@ -194,6 +200,12 @@
 						<showDeprecation>true</showDeprecation>
 					</configuration>
 				</plugin>
+
+                                <plugin>
+                                        <groupId>org.apache.maven.plugins</groupId>
+                                        <artifactId>maven-deploy-plugin</artifactId>
+                                        <version>2.8.2</version>
+                                </plugin>
 
 				<plugin>
 					<groupId>org.apache.maven.plugins</groupId>
@@ -406,7 +418,7 @@
 						<dependency>
 							<groupId>com.github.ferstl</groupId>
 							<artifactId>pedantic-pom-enforcers</artifactId>
-							<version>1.2.0</version>
+							<version>1.3.1</version>
 						</dependency>
 						<dependency>
 							<groupId>nl.topicus.onderwijs.maven</groupId>
@@ -419,7 +431,7 @@
 				<plugin>
 					<groupId>org.apache.maven.plugins</groupId>
 					<artifactId>maven-gpg-plugin</artifactId>
-					<version>1.5</version>
+					<version>1.6</version>
 					<executions>
 						<execution>
 							<id>sign-artifacts</id>
@@ -484,12 +496,18 @@
 				<plugin>
 					<groupId>org.apache.maven.plugins</groupId>
 					<artifactId>maven-resources-plugin</artifactId>
-					<version>3.0.1</version>
+					<version>3.0.2</version>
 					<inherited>true</inherited>
 					<configuration>
 						<encoding>UTF-8</encoding>
 					</configuration>
 				</plugin>
+
+                                <plugin>
+                                        <groupId>org.apache.maven.plugins</groupId>
+                                        <artifactId>maven-site-plugin</artifactId>
+                                        <version>3.6</version>
+                                </plugin>
 
 				<plugin>
 					<groupId>org.apache.maven.plugins</groupId>
@@ -505,6 +523,23 @@
 						</execution>
 					</executions>
 				</plugin>
+
+                                <plugin>
+                                        <groupId>org.apache.maven.plugins</groupId>
+                                        <artifactId>maven-surefire-plugin</artifactId>
+                                        <version>2.20.1</version>
+                                        <inherited>true</inherited>
+                                        <configuration>
+                                                <argLine>-Xmx1536m</argLine>
+                                                <systemPropertyVariables>
+                                                        <java.awt.headless>true</java.awt.headless>
+                                                </systemPropertyVariables>
+                                                <includes>
+                                                        <include>**/*.java</include>
+                                                </includes>
+                                                <useManifestOnlyJar>false</useManifestOnlyJar>
+                                        </configuration>
+                                </plugin>
 
 				<plugin>
 					<groupId>org.codehaus.mojo</groupId>
@@ -526,7 +561,7 @@
 				<plugin>
 					<groupId>org.codehaus.mojo</groupId>
 					<artifactId>jaxb2-maven-plugin</artifactId>
-					<version>2.3</version>
+					<version>2.3.1</version>
 				</plugin>
 
 				<plugin>
@@ -553,7 +588,7 @@
 				<plugin>
 					<groupId>org.codehaus.mojo</groupId>
 					<artifactId>versions-maven-plugin</artifactId>
-					<version>2.3</version>
+					<version>2.5</version>
 					<configuration>
 						<rulesUri>file://${user.dir}/version-rules.xml</rulesUri>
 					</configuration>
