--- a/pom.xml
+++ b/pom.xml
@@ -85,10 +85,10 @@
 
 		<version.wildfly>10.1.1.Final</version.wildfly>
 		<version.danekja>1.8.5</version.danekja>
-		<version.jackson>2.9.5</version.jackson>
-		<version.junit.jupiter>5.1.1</version.junit.jupiter>
-		<version.junit.platform>1.2.0-M1</version.junit.platform>
-		<version.wicket>7.10.0</version.wicket>
+		<version.jackson>2.9.6</version.jackson>
+		<version.junit.jupiter>5.2.0</version.junit.jupiter>
+		<version.junit.platform>1.2.0</version.junit.platform>
+		<version.wicket>8.0.0</version.wicket>
 	</properties>
 
 	<dependencyManagement>
@@ -264,7 +264,7 @@
 				<plugin>
 					<groupId>org.apache.maven.plugins</groupId>
 					<artifactId>maven-clean-plugin</artifactId>
-					<version>3.0.0</version>
+					<version>3.1.0</version>
 				</plugin>
 
 				<plugin>
@@ -526,7 +526,7 @@
 				<plugin>
 					<groupId>org.apache.maven.plugins</groupId>
 					<artifactId>maven-help-plugin</artifactId>
-					<version>2.2</version>
+					<version>3.1.0</version>
 				</plugin>
 
 				<plugin>
@@ -538,7 +538,7 @@
 				<plugin>
 					<groupId>org.apache.maven.plugins</groupId>
 					<artifactId>maven-jar-plugin</artifactId>
-					<version>3.0.2</version>
+					<version>3.1.0</version>
 					<configuration>
 						<archive>
 							<index>true</index>
@@ -565,7 +565,7 @@
 				<plugin>
 					<groupId>org.apache.maven.plugins</groupId>
 					<artifactId>maven-javadoc-plugin</artifactId>
-					<version>3.0.0</version>
+					<version>3.0.1</version>
 					<inherited>true</inherited>
 					<configuration>
 						<encoding>UTF-8</encoding>
@@ -582,7 +582,7 @@
 				<plugin>
 					<groupId>org.apache.maven.plugins</groupId>
 					<artifactId>maven-resources-plugin</artifactId>
-					<version>3.0.2</version>
+					<version>3.1.0</version>
 					<inherited>true</inherited>
 					<configuration>
 						<encoding>UTF-8</encoding>
@@ -592,7 +592,7 @@
 				<plugin>
 					<groupId>org.apache.maven.plugins</groupId>
 					<artifactId>maven-site-plugin</artifactId>
-					<version>3.7</version>
+					<version>3.7.1</version>
 				</plugin>
 
 				<plugin>
@@ -613,7 +613,7 @@
 				<plugin>
 					<groupId>org.apache.maven.plugins</groupId>
 					<artifactId>maven-surefire-plugin</artifactId>
-					<version>2.21.0</version>
+					<version>2.22.0</version>
 					<inherited>true</inherited>
 					<configuration>
 						<argLine>-Xmx1536m</argLine>
@@ -629,7 +629,7 @@
 						<dependency>
 							<groupId>org.junit.platform</groupId>
 							<artifactId>junit-platform-surefire-provider</artifactId>
-							<version>1.2.0-M1</version>
+							<version>${version.junit.platform}</version>
 						</dependency>
 					</dependencies>
 				</plugin>
@@ -654,7 +654,7 @@
 				<plugin>
 					<groupId>org.codehaus.mojo</groupId>
 					<artifactId>jaxb2-maven-plugin</artifactId>
-					<version>2.3.1</version>
+					<version>2.4</version>
 				</plugin>
 
 				<plugin>
