--- a/pom.xml
+++ b/pom.xml
@@ -114,6 +114,11 @@
 				<version>${version.jackson}</version>
 			</dependency>
 			<dependency>
+				<groupId>com.github.openjson</groupId>
+				<artifactId>openjson</artifactId>
+				<version>1.0.10</version>
+			</dependency>
+			<dependency>
 				<groupId>commons-fileupload</groupId>
 				<artifactId>commons-fileupload</artifactId>
 				<version>1.3.3</version>
