renamed artifacts, added 'crashdata-' prefix
this makes it easier to handle the generically named artifacs,
especially if they keep growing.

--- a/eclipse-settings/pom.xml
+++ b/eclipse-settings/pom.xml
@@ -8,7 +8,7 @@
 		<version>1.21-SNAPSHOT</version>
 	</parent>
 
-	<artifactId>eclipse-settings</artifactId>
+	<artifactId>crashdata-eclipse-settings</artifactId>
 	<packaging>jar</packaging>
 	
 	<name>Crashdata eclipse settings</name>
