Added jboss java ee 8 specs to parent

--- a/pom.xml
+++ b/pom.xml
@@ -95,6 +95,13 @@
 	<dependencyManagement>
 		<dependencies>
 			<dependency>
+                <groupId>org.jboss.spec</groupId>
+                <artifactId>jboss-javaee-8.0</artifactId>
+                <version>1.0.3.Final</version>
+                <type>pom</type>
+                <scope>import</scope>
+            </dependency>
+			<dependency>
 				<groupId>com.fasterxml.jackson.core</groupId>
 				<artifactId>jackson-annotations</artifactId>
 				<version>${version.jackson}</version>
